--- a/Тест.html
+++ b/Тест.html
@@ -14,9 +14,9 @@
         </div>
         <nav>
             <ul>
-                <li><a href="Главная страница.html">Главная</a></li>
-                <li><a href="Главная страница.html#о-вузе">О вузе</a></li>
-                <li><a href="Главная страница.html#факультеты">Факультеты</a></li>
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="index.html#о-вузе">О вузе</a></li>
+                <li><a href="index.html#факультеты">Факультеты</a></li>
             </ul>
         </nav>
         <div class="бургер-меню">
@@ -71,7 +71,7 @@
             <h2>Результаты теста</h2>
             <p>Вы ответили правильно на <span id="баллы">0</span> из 5 вопросов.</p>
             <p id="оценка"></p>
-            <a href="Главная страница.html" class="кнопка">Вернуться на главную</a>
+            <a href="index.html" class="кнопка">Вернуться на главную</a>
             <a href="#" class="кнопка" onclick="перезагрузитьТест()">Пройти тест снова</a>
         </div>
     </main>
